Added first image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+<img src="logo.png" alt="Logo de la página web">
 <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page.</p>
 <footer>
 </footer>
