Added contact information

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <img src="logo.png" alt="Logo de la página web">
 <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page.</p>
 <footer>
+<p> Company: Nat creativa </p>
+<p><a href="mailto:nataliapersonal111@gmail.com"</a></p>
 </footer>
 </body>
 </html>
