Critical content update in main

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <img src="logo.png" alt="Logo de la página web">
 <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page.</p>
+<p>Esta es una actualización en la rama PRINCIPAL pero misma ubi de la actualización rama HOME.</p>
 <footer>
 <p> Company: Nat creativa </p>
 <p><a href="mailto:nataliapersonal111@gmail.com"</a></p>
